# alphabet

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: linux.yaml  macos.yaml  windows.yaml
src/: main.cpp
src/ExecutionResult/: ExecutionResult.h  MediationResult.h  ProbingResult.h
src/Main/: Main.cpp  Main.h
src/Tool/: Tool.cpp  Tool.h
src/Toolset/: Toolset.cpp  Toolset.h
src/ToolsetSearcher/: ToolsetSearcher.cpp  ToolsetSearcher.h
src/aux/: platform_detector.h
src/auxilary/: platform_detector.cpp  vector.h
